[package]
name = "smol_egui_skia"
version = "0.1.1"
edition = "2021"
description = "smol_egui_skia is a skia integration for the egui ui library. It differs from the egui_skia library in that it is NOT intended to allow you to create _ui applications_ that render egui UIs with skia, rather just render images using egui as layout engine."
license = "MIT"
repository = "https://github.com/lily-mara/smol_egui_skia"
keywords = ["skia", "egui", "skia-safe"]

[features]
cpu_fix = []

[profile.dev]
opt-level = 3

[dependencies]
egui = "0.28"
skia-safe = { version = "0.75", features = [] }

[dev-dependencies]
softbuffer = "0.4.5"
egui_demo_lib = "0.28"
raw-window-handle = "0.5"
foreign-types-shared = "0.1.1"
egui_extras = { version = "0.28", features = ["all_loaders"] }
image = { version = "0.25.1", features = ["png", "jpeg"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
metal = "0.24"
cocoa = "0.24"
core-graphics-types = "0.1"
objc = "0.2"
